--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ http://www.templatemo.com/tm-505-stacked
                               <div class="project-item">
                                 <a href="img/project-item-01.jpg" data-lightbox="image-1"><img src="img/project-item-01.jpg" alt=""></a>
                                 <div class="text-content">
-                                  <h4>Graphics Design</h4>
+                                  <h4>Graphics Designs</h4>
                                   <p> We create Amazing desings .</p>
                                 <!--   <div class="primary-button">
                                     <a href="#">Discover More</a>
