--- a/index.html
+++ b/index.html
@@ -250,9 +250,8 @@ http://www.templatemo.com/tm-505-stacked
                         </div>
                         <div class="col-md-4">
                           <div class="more-info">
-                            <p>Lorem ipsum dolor , consectetur adipiscing elit. Nunc purus ligula, ullamcorper id velit id, vestibulum auc sapien. Sed quis mauris eget sem imperdiet rhoncus.<br><br>
-                            <em>3344 Etiam mauris erat,
-								<br>Vestibulum eu augue nec, 10550</em></p>
+                            <p>contact <br> please call+2347044692205 <br> or message +8155353242255 on whattsapp 
+		           </p>
                           </div>
                         </div>
                       </div>
