--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ http://www.templatemo.com/tm-505-stacked
                         </div>
                         <div class="col-md-4">
                           <div class="more-info">
-                            <p>contact <br> please call <a href="tell:+2347044692205">give us a call</a> <br> or message me on <a https://wa.me/+2348174518007> whattsapp</a> 
+                            <p>contact <br> please call <a href="tel:+2347044692205"> here </a> <br> or whatsapp me <a href="https://bit.ly/2MMQX7A">here</a> 
 		           </p>
                           </div>
                         </div>
