--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ http://www.templatemo.com/tm-505-stacked
                       <div class="heading">
                         <h4>Contact us</h4>
                       </div>
-                      <div class="row">
+                     <!-- <div class="row">
                         <div class="col-md-8">
                           <div class="contat-form">
                             <form id="contact" action="" method="post">
@@ -247,10 +247,10 @@ http://www.templatemo.com/tm-505-stacked
                               </fieldset>
                             </form>
                           </div>
-                        </div>
+                        </div> -->
                         <div class="col-md-4">
                           <div class="more-info">
-                            <p>contact <br> please call <a href="tel:+2347044692205"> here </a> <br> or whatsapp me <a href="https://bit.ly/2MMQX7A">here</a> 
+                            <p> Do you need any of our services? <br>contact us<br> please call <a href="tel:+2347044692205"> here </a> <br> or whatsapp me <a href="https://bit.ly/2MMQX7A">here</a> 
 		           </p>
                           </div>
                         </div>
