--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ http://www.templatemo.com/tm-505-stacked
                           <div class="home-box-content">
                             <div class="left-text">
                               <h4>Alademomi<em> Tolulope</em> Daniel</h4>
-                              <p>This Website is brought to you by Alademomi Tolulope Daniel.<br>Web developer, Photographer and a Graphics Designer .</p>
+                              <p>This Website is brought to you by Alademomi Tolulope Daniel.<br>Web developer, Photographer and  Graphics Designer .</p>
                               <div class="primary-button">
                                 <a href="#2">See About</a>
                               </div>
@@ -98,7 +98,7 @@ http://www.templatemo.com/tm-505-stacked
                         <div class="col-md-7 col-md-offset-5">
                           <div class="about-box-text">
                             <h4>About Developer</h4>
-                            <p>Alademomi Daniel is a web-site designer, built <em><mark>Responsive</mark></em> sites and also very good at Photography and Graphics Designs.</p>
+                            <p>Alademomi Daniel is a web-site developer, built <em><mark>Responsive</mark></em> sites and also very good at Photography and Graphics Designs.</p>
                             <div class="primary-button">
                               <a href="#3">See our recent projects</a>
                             </div>
