--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ http://www.templatemo.com/tm-505-stacked
                         </div> -->
                         <div class="col-md-4">
                           <div class="more-info">
-                            <p> Do you need any of our services? <br>contact us<br> please call <a href="tel:+2347044692205"> here </a> <br> or whatsapp me <a href="https://bit.ly/2MMQX7A">here</a> 
+                            <p> Do you need any of our services? <br>contact us<br> on whatsapp<a href="https://bit.ly/2MMQX7A">here</a> <br> or  please call <a href="tel:+2347044692205"> here </a> 
 		           </p>
                           </div>
                         </div>
