--- a/index.html
+++ b/index.html
@@ -250,7 +250,22 @@ http://www.templatemo.com/tm-505-stacked
                         </div> -->
                         <div class="col-md-4">
                           <div class="more-info">
-                            <p> Do you need any of our services? <br>contact us<br> on whatsapp<a href="https://bit.ly/2MMQX7A"> here</a> <br> or  please call <a href="tel:+2347044692205"> here </a> 
+                            <p> Do you need any of our services? <br>contact us on <br>
+		           <li>
+                              <a href="https://bit.ly/2MMQX7A"><i class="fa fa-whatsapp"></i></a>
+                              </li> 
+                             <li>
+                                    <a href="tel:+2347044692205""><i class="fa fa-phone"></i></a>
+                             </li>
+                             <li>
+                              <a href="https://www.linkedin.com/in/alademomi-daniel-562bbb203"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                            <li>
+                              <a href="https://www.facebook.com/tolulope.alademomi""><i class="fa fa-facebook"></i></a>
+                       </li>
+                       <li>
+                        <a href="https://www.twitter.com/@Danielalademomi""><i class="fa fa-twitter"></i></a>
+                 </li>
 		           </p>
                           </div>
                         </div>
