--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ http://www.templatemo.com/tm-505-stacked
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link rel="shortcut icon" href="img/favicon.gif" />
+        <link rel="shortcut icon" href="img/favicon.gif">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/templatemo-style.css">
