--- a/index.html
+++ b/index.html
@@ -248,9 +248,10 @@ http://www.templatemo.com/tm-505-stacked
                             </form>
                           </div>
                         </div> -->
+			    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScxiKhUcvaBOizzs8V9KLR_AD1QYW8nLbLasIPDrRpM74PKAw/viewform?embedded=true" width="400" height="400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                         <div class="col-md-4">
                           <div class="more-info">
-                            <p> Do you need any of our services? <br>contact us on <br>
+                            <p> contact us<br> on <br>
 		           <li>
                               <a href="https://bit.ly/2MMQX7A"><i class="fa fa-whatsapp"></i></a>
                               </li> 
