--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ http://www.templatemo.com/tm-505-stacked
                             </form>
                           </div>
                         </div> -->
-			    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScxiKhUcvaBOizzs8V9KLR_AD1QYW8nLbLasIPDrRpM74PKAw/viewform?embedded=true" width="310" height="400" frameborder="0" marginheight="20" marginwidth="100">Loading…</iframe>
+			   <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScxiKhUcvaBOizzs8V9KLR_AD1QYW8nLbLasIPDrRpM74PKAw/viewform?embedded=true" width="310" height="400" frameborder="0" marginheight="20" marginwidth="100">Loading…</iframe> -->
                        <div id="ff-compose"></div>
 <script async defer src="https://formfacade.com/include/115159972406546427678/form/1FAIpQLScxiKhUcvaBOizzs8V9KLR_AD1QYW8nLbLasIPDrRpM74PKAw/classic.js?div=ff-compose"></script>
  <div class="col-md-4">
