--- a/index.html
+++ b/index.html
@@ -247,10 +247,30 @@ http://www.templatemo.com/tm-505-stacked
                               </fieldset>
                             </form>
                           </div>
-                        </div> -->
-			   <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScxiKhUcvaBOizzs8V9KLR_AD1QYW8nLbLasIPDrRpM74PKAw/viewform?embedded=true" width="310" height="400" frameborder="0" marginheight="20" marginwidth="100">Loading…</iframe> -->
+                        </div> 
+			   <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScxiKhUcvaBOizzs8V9KLR_AD1QYW8nLbLasIPDrRpM74PKAw/viewform?embedded=true" width="310" height="400" frameborder="0" marginheight="20" marginwidth="100">Loading…</iframe> 
                        <div id="ff-compose"></div>
-<script async defer src="https://formfacade.com/include/115159972406546427678/form/1FAIpQLScxiKhUcvaBOizzs8V9KLR_AD1QYW8nLbLasIPDrRpM74PKAw/classic.js?div=ff-compose"></script>
+<script async defer src="https://formfacade.com/include/115159972406546427678/form/1FAIpQLScxiKhUcvaBOizzs8V9KLR_AD1QYW8nLbLasIPDrRpM74PKAw/classic.js?div=ff-compose"></script>-->
+                           <form name="contact" method="POST" data-netlify="true">
+  <p>
+    <label>Your Name: <input type="text" name="name" /></label>   
+  </p>
+  <p>
+    <label>Your Email: <input type="email" name="email" /></label>
+  </p>
+  <p>
+    <label>Your Role: <select name="role[]" multiple>
+      <option value="leader">Leader</option>
+      <option value="follower">Follower</option>
+    </select></label>
+  </p>
+  <p>
+    <label>Message: <textarea name="message"></textarea></label>
+  </p>
+  <p>
+    <button type="submit">Send</button>
+  </p>
+</form>
  <div class="col-md-4">
                           <div class="more-info">
                             <p> contact us<br> on <br>
