--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@ http://www.templatemo.com/tm-505-stacked
   <p>
     <button type="submit">Send</button>
   </p>
+<input type="hidden" name="form-name" value="contact">
 </form>
  <div class="col-md-4">
                           <div class="more-info">
@@ -325,18 +326,7 @@ http://www.templatemo.com/tm-505-stacked
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
              
-             document.querySelector("form").addEventListener("submit", handleSubmit);
-
-const handleSubmit = (e) => {
-  e.preventDefault()
-  let myForm = document.getElementById('pizzaOrder');
-  let formData = new FormData(myForm)
-  fetch('/', {
-    method: 'POST',
-    headers: { "Content-Type": "application/x-www-form-urlencoded" },
-    body: new URLSearchParams(formData).toString()
-  }).then(() => console.log('Form successfully submitted')).catch((error) =>
-    alert(error))
+            
 }
  
         </script>
