--- a/index.html
+++ b/index.html
@@ -229,10 +229,10 @@ http://www.templatemo.com/tm-505-stacked
                       <div class="heading">
                         <h4>Contact us</h4>
                       </div>
-                     <!-- <div class="row">
+                      <div class="row">
                         <div class="col-md-8">
                           <div class="contat-form">
-                            <form id="contact" action="" method="post">
+                            <form name="contact" method="POST" data-netlify="true">
                               <fieldset>
                                 <input name="name" type="text" class="form-control" id="name" placeholder="Your Name" required>
                               </fieldset>
@@ -245,32 +245,15 @@ http://www.templatemo.com/tm-505-stacked
                               <fieldset>
                                 <button type="submit" id="form-submit" class="btn">Send Message</button>
                               </fieldset>
+                               <form name="contact" method="POST" data-netlify="true">
                             </form>
                           </div>
                         </div> 
 			   <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScxiKhUcvaBOizzs8V9KLR_AD1QYW8nLbLasIPDrRpM74PKAw/viewform?embedded=true" width="310" height="400" frameborder="0" marginheight="20" marginwidth="100">Loading…</iframe> 
                        <div id="ff-compose"></div>
 <script async defer src="https://formfacade.com/include/115159972406546427678/form/1FAIpQLScxiKhUcvaBOizzs8V9KLR_AD1QYW8nLbLasIPDrRpM74PKAw/classic.js?div=ff-compose"></script>-->
-                           <form name="contact" method="POST" data-netlify="true">
-  <p>
-    <label>Your Name: <input type="text" name="name" /></label>   
-  </p>
-  <p>
-    <label>Your Email: <input type="email" name="email" /></label>
-  </p>
-  <p>
-    <label>Your Role: <select name="role[]" multiple>
-      <option value="leader">Leader</option>
-      <option value="follower">Follower</option>
-    </select></label>
-  </p>
-  <p>
-    <label>Message: <textarea name="message"></textarea></label>
-  </p>
-  <p>
-    <button type="submit">Send</button>
-  </p>
-<input type="hidden" name="form-name" value="contact">
+                           
+  
 </form>
  <div class="col-md-4">
                           <div class="more-info">
